# GSASII

./: .gitignore  G2compare.py  GSASII.py  GSASIIElem.py  GSASIIElemGUI.py  GSASIIIO.py  GSASIIIntPDFtool.py  GSASIIconstrGUI.py  GSASIIctrlGUI.py  GSASIIdataGUI.py  GSASIIddataGUI.py  GSASIIexprGUI.py  GSASIIfiles.py  GSASIIfpaGUI.py  GSASIIimage.py  GSASIIimgGUI.py  GSASIIindex.py  GSASIIlattice.py  GSASIIlog.py  GSASIImapvars.py  GSASIImath.py  GSASIImpsubs.py  GSASIIobj.py  GSASIIpath.py  GSASIIphsGUI.py  GSASIIplot.py  GSASIIpwd.py  GSASIIpwdGUI.py  GSASIIrestrGUI.py  GSASIIsasd.py  GSASIIscriptable.py  GSASIIseqGUI.py  GSASIIspc.py  GSASIIstrIO.py  GSASIIstrMain.py  GSASIIstrMath.py  README.md  config_example.py  environment.yml  main.py  (+5 more)
GSASII/: GSASIIfiles.py  GSASIIpath.py  pathHacking.py
GSASII/GSASII-bin/linux_64_p3.13_n2.2/: GSASIIversion.txt  LATTIC
GSASII/GSASII-bin/mac_arm_p3.13_n2.2/: Build.notes.txt  GSASIIversion.txt  convcell  (+1 more)
GSASII/imports/: G2phase_CIF.py
awsBindist/: Build.notes.txt
bindist/: Build.notes.txt  LATTIC  LATTIC.r5530  LATTIC.r5533  convcell  convcell.r5530  convcell.r5533  libquadmath.0.dylib
exports/: G2export_Bracket.py  G2export_CIF.py  G2export_JSON.py  G2export_PDB.py  G2export_csv.py
imports/: G2img_1TIF.py  G2img_ADSC.py  G2img_CheMin.py  G2img_GE.py  G2img_HDF5.py  G2img_MAR.py  G2img_PILTIF.py  G2img_Rigaku.py  G2img_SFRM.py  G2pdf_gr.py  G2phase.py  G2phase_CIF.py  G2phase_GPX.py  G2phase_xyz.py  G2pwd_BrukerRAW.py  G2pwd_FP.py  G2pwd_csv.py  G2pwd_fxye.py  G2pwd_rigaku.py  G2pwd_xye.py  G2sad_xye.py  G2sfact.py
(+2 files in other folders)
