[project]
name = "gsas2"
version = "6.0.0"
description = "GSAS-II crystallography software"
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = { file = "LICENSE" }
authors = [{ name = "Argonne APS", email = "gsas2@aps.anl.gov" }]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.9",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["GSASII"]

[project.entry-points.console_scripts]
gsas2 = "GSASII.Main:main"
