[project]
name = "GSASII"
version = "2025.04"
requires-python = ">=3.13,<4.0"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.9",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where  = ["."]
include = ["GSASII", "GSASII.*"]

[project.entry-points.console_scripts]
GSASII = "GSASII.Main:main"
